# FLINT

.github/workflow/: windows.yml
.github/workflows/: ubuntu.yml  windows.yml
Source/: CMakeLists.txt  vcpkg.json
scripts/: CPackConfig.cmake
vcpkg/: vcpkg_setup_vs2019_win_x64.bat  vcpkg_setup_vs2022_win_x64.bat
vcpkg/registry/ports/zipper/1.0.1_0/: portfile.cmake
vcpkg/triplets/: moja-x64-windows.cmake
